gateway/mediation/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-ext-proc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-ext-proc
  template:
    metadata:
      labels:
        app: grpc-ext-proc
    spec:
      containers:
        - name: golang-app-container
          image: apk-mediation:1.3.1-SNAPSHOT  # Replace with your actual image name and tag
          imagePullPolicy: IfNotPresent
          args: ["./mediation"]
          ports:
            - containerPort: 8000
            - containerPort: 9002
          volumeMounts:
            - name: grpc-ext-proc-secret
              mountPath: /home/wso2/certs
          # readinessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 8080
      volumes:
        - name: grpc-ext-proc
          configMap:
            name: grpc-ext-proc
        - name: grpc-ext-proc-secret
          secret:
            secretName: grpc-ext-proc-secret
            items:
              - key: tls.crt
                path: server.crt
              - key: tls.key
                path: server.key
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-ext-proc
spec:
  selector:
    app: grpc-ext-proc
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
